objects/sked_Booking_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>End_Working_Time__c</fullName>
        <defaultValue>1800</defaultValue>
        <label>End Working Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Predefined_Duration_Options__c</fullName>
        <defaultValue>&apos;60;120;180&apos;</defaultValue>
        <inlineHelpText>List of predefined duration (minutes) options, searated by ; 
e.g., 60;120;180</inlineHelpText>
        <label>Predefined Duration Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Survey_Predefined_timeslots__c</fullName>
        <defaultValue>&apos;700;900;1200;1400&apos;</defaultValue>
        <inlineHelpText>List of predefined timeslots for each day of the week, searated by ;
e.g., 700;900;1200;1400</inlineHelpText>
        <label>Site Survey Predefined Timeslots</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Working_Time__c</fullName>
        <defaultValue>900</defaultValue>
        <label>Start Working Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Skedulo Booking Setting</label>
</CustomObject>